--- a/styles/style.css
+++ b/styles/style.css
@@ -22,6 +22,40 @@ hr{
     border: 1px solid #D1D1D1;
     margin-bottom: 27px;
 }
+/* ---------------
+    header
+-----------------*/
+header{
+    display: flex;
+    justify-content: center;
+    background: #562EFF;
+}
+nav{
+    width: 930px;
+    height: 95px;
+    display: flex;
+    justify-content: space-between;
+    color: #fff;
+}
+.site-title{
+    display: flex;
+    align-items: center;
+}
+.logo{
+    width: 40px;
+    height: 50px;
+    margin-right: 15px;
+}
+.menu{
+    display: flex;
+    align-items: center;
+}
+.menu a{
+    text-decoration: none;
+    color: #fff;
+    font-size: 16px;
+    margin-left: 20px;
+}
 /* top players style  */
 .top-players{
     margin-bottom: 30px;
