--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,8 @@
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #F3F1FF;
+    margin: 0;
+    padding: 0;
 }
 main{
     display: flex;
